--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <title>LABB Email</title>
         <meta name="author" content="LABB">
-        <link rel="shortcut icon" href="/favicon.ico" />
+        <link rel="shortcut icon" href="https://labb.email/favicon.ico" />
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
