--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+        <link rel="stylesheet" href="static/css/bootstrap/bootstrap.min.css">
         <link rel="stylesheet" href="css/styles.css">
     </head>
 
@@ -55,10 +55,10 @@
 
         </div>
 
-        <script src="js/jquery/jquery-3.3.1.min.js"></script>
-        <script src="js/popper/popper.min.js"></script>
-        <script src="js/bootstrap/bootstrap.min.js"></script>
-        <script src="js/scripts.js"></script>
+        <script src="static/js/jquery/jquery-3.3.1.min.js"></script>
+        <script src="static/js/popper/popper.min.js"></script>
+        <script src="static/js/bootstrap/bootstrap.min.js"></script>
+        <script src="static/js/scripts.js"></script>
     </body>
 
 </html>
