Change bootstrap to dark

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
 
-        <title>LABB Email</title>
+        <title>LABB: Email Server</title>
         <meta name="author" content="LABB">
         <link rel="shortcut icon" href="https://labb.email/favicon.ico" />
 
@@ -13,9 +13,10 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <link rel="stylesheet" href="static/css/bootstrap/bootstrap.min.css">
         <link rel="stylesheet" href="css/styles.css">
+
     </head>
 
-    <body>
+    <body class="text-white bg-dark">
 
         <div class="container">
 
@@ -25,13 +26,13 @@
 
                 <div class="col col-lg-8 vertical-center">
 
-                    <div class="jumbotron no-margin-bottom">
+                    <div class="jumbotron no-margin-bottom bg-secondary text-light">
                         <h1 class="d-sm-none display-6">you found my email</h1>
                         <h1 class="d-none d-sm-block display-4">you found my email</h1>
                         <hr class="my-4">
                         <figure class="figure">
                             <img src="img/dummy-image.jpeg" class="figure-img rounded img-fluid" alt="A dummy image">
-                            <figcaption class="figure-caption">feel free to leave me a message</figcaption>
+                            <figcaption class="figure-caption text-light">feel free to leave me a message</figcaption>
                         </figure>
                         <hr class="my-4">
                         
