--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
                         <div>
                             <a class="btn btn-primary btn-lg btn-block" href="mailto:contact@labb.email" role="button">contact@labb.email</a>
-                            <a class="btn btn-danger btn-sm btn-block" href="https://www.abbluiz.com" role="button">continue to abbluiz.com</a>
+                            <a class="btn btn-danger btn-sm btn-block" href="https://www.abbluiz.com" role="button">or, continue to abbluiz.com</a>
                         </div>
                     
                     </div>
